---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 17
  l: "        println!(\"Function x from parent module\");\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^      "
- n: 23
  l: "        println!(\"Function y from sibling module\");\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^      "
- n: 38
  l: "    println!(\"Global test_var is now {}\", test_var);\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^^^                "
- n: 51
  l: "        println!(\"Function decorator called\");\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^^^^^^      "
- n: 60
  l: "    println!(\"Inside decorated function\");\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^^^      "
- n: 77
  l: "            instance_var: String::from(\"hello\"),\n"
  m: "                                         ^^^^^      "
- n: 92
  l: "            println!(\"Static method decorator called\");\n"
  m: "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^      "
- n: 100
  l: "        self.instance_var = \"Instance variable\".to_string();\n"
  m: "                              ^^^^^^^^^^^^^^^^^                 "
- n: 101
  l: "        println!(\"Instance variable is {}\", self.instance_var);\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^^^^                         "
- n: 106
  l: "        println!(\"Inside static method\");\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^      "
- n: 121
  l: "            TestEnum::VariantOne => println!(\"One\"),\n"
  m: "                                               ^^^      "
- n: 122
  l: "            TestEnum::VariantTwo => println!(\"Two\"),\n"
  m: "                                               ^^^      "
- n: 123
  l: "            TestEnum::VariantOther => println!(\"Other\"),\n"
  m: "                                                 ^^^^^      "
- n: 130
  l: "    let mut nonlocal_var = \"Initial value\".to_string();\n"
  m: "                             ^^^^^^^^^^^^^                 "
- n: 134
  l: "            nonlocal_var = \"Modified value\".to_string();\n"
  m: "                             ^^^^^^^^^^^^^^                 "
- n: 138
  l: "    println!(\"Nonlocal variable is {}\", nonlocal_var);\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^                    "
- n: 148
  l: "    println!(\"Inplace operations result: {}\", x);\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^         "
- n: 156
  l: "        println!(\"test_var is greater than 5\");\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^      "
- n: 158
  l: "        println!(\"test_var is 5 or less\");\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^^      "
- n: 164
  l: "        println!(\"Counter is {}\", counter);\n"
  m: "                   ^^^^^^^^^^^^^               "
- n: 170
  l: "        println!(\"Loop iteration {}\", i);\n"
  m: "                   ^^^^^^^^^^^^^^^^^         "
- n: 174
  l: "    let file = File::open(file!()).expect(\"Cannot open file\");\n"
  m: "                                            ^^^^^^^^^^^^^^^^      "
- n: 177
  l: "        println!(\"Read from file: {:?}\", line);\n"
  m: "                   ^^^^^^^^^^^^^^^^^^^^            "
- n: 184
  l: "    let mut client = client::connect(\"127.0.0.1:6379\").await?;\n"
  m: "                                       ^^^^^^^^^^^^^^             "
- n: 187
  l: "    client.set(\"hello\", \"world\".into()).await?;\n"
  m: "                 ^^^^^                               "
- n: 187
  l: "    client.set(\"hello\", \"world\".into()).await?;\n"
  m: "                            ^^^^^                    "
- n: 190
  l: "    let result = client.get(\"hello\").await?;\n"
  m: "                              ^^^^^             "
- n: 192
  l: "    println!(\"got value from the server; result={:?}\", result);\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^              "
- n: 209
  l: "    let multi_line_str = \"\n"
  m: "                           ^^"
- n: 210
  l: "This is a\n"
  m: ^^^^^^^^^^^
- n: 211
  l: "multi-line string\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 212
  l: "for testing purposes.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^
- n: 216
  l: "        \"This is a\\nmultiline{} string\\nspanning several lines\",\n"
  m: "          ^^^^^^^^^                                                   "
- n: 216
  l: "        \"This is a\\nmultiline{} string\\nspanning several lines\",\n"
  m: "                      ^^^^^^^^^^^^^^^^^^                              "
- n: 216
  l: "        \"This is a\\nmultiline{} string\\nspanning several lines\",\n"
  m: "                                           ^^^^^^^^^^^^^^^^^^^^^^     "
- n: 217
  l: "        \"{f_string}\"\n"
  m: "          ^^^^^^^^^^    "
- n: 220
  l: "    let raw_string = r\"This is a raw string with no special treatment for \\n\";\n"
  m: "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^     "
- n: 222
  l: "This is a raw string with no special treatment for \\n\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 224
  l: "    let bytes_string = b\"This is a bytes string\";\n"
  m: "                          ^^^^^^^^^^^^^^^^^^^^^^     "
- n: 225
  l: "    let raw_f_string = format!(r\"This is a raw f-string with {}\", raw_string);\n"
  m: "                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^                  "
- n: 234
  l: "    println!(\"{}\", square(5));\n"
  m: "               ^^                 "
- n: 241
  l: "#[cfg(feature = \"some-feature\")]\n"
  m: "                  ^^^^^^^^^^^^      "
